[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Modules/ChangeStreamInGame/ChangeStreamInGame.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="ChangeStreamInGame" type="Node"]
script = ExtResource( 2 )

[node name="PlayButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ChangeStreamTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="ChangeStreamTimer" to="." method="_on_ChangeStreamTimer_timeout"]
